<resources>

    <string name="app_name">TP1</string>
    <string name="hello_world">Rendue du tp1 -- Victorio Garcia</string>

    <string name="exercice1">Exercice numéro 1</string>
    <string name="exercice1Button1" >Bouton 1</string>
    <string name="exercice1Button2">Bouton 2</string>
    <string name="exercice1Button3">Bouton 3</string>

    <string name="exercice2">Exercice numéro 2</string>
    <string name="exercice2Button1" >Bouton 1</string>
    <string name="exercice2Button2">Bouton 2</string>
    <string name="exercice2Button3">Bouton 3</string>
    <string name="exercice2Button4">Bouton 4</string>


    <string name="exercice3">Exercice numéro 3</string>
    <string name="exercice3Button1" >Bouton 1</string>
    <string name="exercice3Button2">Bouton 2</string>
    <string name="exercice3Button3">Bouton 3</string>

    <string name="exercice4">Exercice numéro 4</string>
    <string name="more">Plus</string>
    <string name="call">Appeler</string>


</resources>