<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:id="@+id/Titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/exercice1"
        android:textSize="40sp"/>

    <Button
        android:id="@+id/Button1.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/exercice1Button1"
        android:layout_marginTop="30dp" />
    <Button
        android:id="@+id/Button1.2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/exercice1Button2"
        android:layout_marginTop="30dp" />
    <Button
        android:id="@+id/Button1.3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/exercice1Button3"
        android:layout_marginTop="30dp" />


</LinearLayout>