<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/Button3_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercice3Button1"
        app:layout_constraintBottom_toTopOf="@+id/Button3_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="30dp" />

    <Button
        android:id="@+id/Button3_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercice3Button2"
        app:layout_constraintBottom_toTopOf="@+id/Button3_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button3_1"
        android:layout_marginBottom="30dp" />

    <Button
        android:id="@+id/Button3_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercice3Button3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button3_2"
        android:layout_marginBottom="30dp" />
    
</FrameLayout>